完成简单sever和client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(unp_prac)
 
 set(CMAKE_C_STANDARD 11)
 
-set(SOURCE_FILES server.c unp_prac.h.h client.c lib/inet_pton.c lib/inet_pton.h)
-add_executable(unp_prac ${SOURCE_FILES})
+set(SIMPLE_SERVER simple/server.c unp_prac.h lib)
+add_executable(simple_server ${SIMPLE_SERVER})
+
+set(SIMPLE_CLIENT simple/client.c unp_prac.h lib)
+add_executable(simple_client ${SIMPLE_CLIENT})
