echo_server/client完成

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,14 @@ project(unp_prac)
 
 set(CMAKE_C_STANDARD 11)
 
-set(SIMPLE_SERVER simple/server.c unp_prac.h lib_io/writen.c lib/error.c)
+set(SIMPLE_SERVER simple/simple_server.c unp_prac.h lib_io/writen.c lib/error.c)
 add_executable(simple_server ${SIMPLE_SERVER})
 
-set(SIMPLE_CLIENT simple/client.c unp_prac.h lib_io/readn.c lib/error.c)
+set(SIMPLE_CLIENT simple/simple_client.c unp_prac.h lib_io/readn.c lib/error.c)
 add_executable(simple_client ${SIMPLE_CLIENT})
+
+set(ECHO_SERVER echo/echo_server.c unp_prac.h lib_io/readn.c lib_io/writen.c lib/error.c)
+add_executable(echo_server ${ECHO_SERVER})
+
+set(ECHO_CLIENT echo/echo_client.c unp_prac.h lib_io/readn.c lib_io/writen.c lib_io/readline.c lib/error.c)
+add_executable(echo_client ${ECHO_CLIENT})
