增加select部分的学习，使用cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
 project(unp_prac)
-
 set(CMAKE_C_STANDARD 11)
 
 set(SIMPLE_SERVER simple/simple_server.c unp_prac.h lib_io/writen.c lib/error.c)
@@ -14,3 +13,6 @@ add_executable(echo_server ${ECHO_SERVER})
 
 set(ECHO_CLIENT echo/echo_client.c unp_prac.h lib_io/readn.c lib_io/writen.c lib_io/readline.c lib/error.c)
 add_executable(echo_client ${ECHO_CLIENT})
+
+set(SELECT_ECHO_SERVER select/select_echo_server.h unp_prac.h select/select_echo_server.cpp lib_io/readn.c lib_io/writen.c lib_io/readline.c lib/error.c)
+add_executable(select_echo_server ${SELECT_ECHO_SERVER})
